--- a/requirements.txt
+++ b/requirements.txt
@@ -17,10 +17,10 @@ itsdangerous==1.1.0
 Jinja2==2.11.2
 Mako==1.1.2
 MarkupSafe==1.1.1
-pkg-resources==0.0.0
 python-dateutil==2.8.1
 python-editor==1.0.4
 six==1.15.0
 SQLAlchemy==1.3.17
 Werkzeug==1.0.1
 WTForms==2.3.1
+gunicorn==20.0.4
